--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -98,15 +98,17 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+ 
 }
-/* header {
-  background: red;
-  font-size: 25px;
-  text-align: center;
-  
-} */
+li {
+  list-style-type: none;
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+}
+h1{
+  text-align: center;
+  margin-bottom: 10px;
 }
