--- a/my-app/src/app/page.module.css
+++ b/my-app/src/app/page.module.css
@@ -1,12 +1,28 @@
+.container{
+  padding: 0 15px;
+}
 .main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
+  padding: 3rem;
   min-height: 100vh;
 }
-
+.link {
+  display: inline-block;
+  padding: 12px;
+  font-weight: 700;
+  color: black;
+  border: 2px solid blueviolet;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.5);
+  margin-bottom: 10px;
+&:hover,
+  &:focus {
+  text-shadow: 3px 3px 20px #ff3cac, -2px 1px 30px #ff3cac;
+  border: 2px solid #ff3cac;
+} 
+}
+.link.active {
+  border: 2px solid #ff3cac;
+}
 .description {
   display: inherit;
   justify-content: inherit;
@@ -72,12 +88,7 @@
   max-width: 30ch;
   text-wrap: balance;
 }
-.headerMain{
-  background: red;
-  font-size: 25px;
-  text-align: center;
-  
-}
+
 .center {
   display: flex;
   justify-content: center;
